--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-leap-day
-tile: Initial Investigation for Using CNNs for LISA Data Analysis
+title: Initial Investigation for Using CNNs for LISA Data Analysis
